

* Incompatible Lisp Changes in Emacs 26.2

---
** shadowfile config files have changed their syntax.
Existing files "~/.emacs.d/shadows" and "~/.emacs.d/shadow_todo" must
be removed prior using the changed 'shadow-*' commands.

+++
** 'thread-alive-p' has been renamed to 'thread-live-p'.
The old name is an alias of the new name.  Future Emacs version will
obsolete it.


* Lisp Changes in Emacs 26.2

+++
** The new function 'read-answer' accepts either long or short answers
depending on the new customizable variable 'read-answer-short'.

+++
** New function 'assoc-delete-all'.
Like 'assq-delete-all', but uses 'equal' for comparison.

---
** The function 'thing-at-point' behaves as before Emacs 26.1.
The behavior of 'thing-at-point' when called with argument 'list' has
changed in Emacs 26.1, in that it didn't consider text inside comments
and strings as a potential list.  This change is now reverted, and
'thing-at-point' behaves like it did before Emacs 26.1.

To cater to use cases where comments and strings are to be ignored
when looking for a list, the function 'list-at-point' now takes an
optional argument to do so.


* Changes in Emacs 26.2 on Non-Free Operating Systems


* Installation Changes in Emacs 26.1

** By default libgnutls is now required when building Emacs.
Use 'configure --with-gnutls=no' to build even when GnuTLS is missing.

** GnuTLS version 2.12.2 or later is now required, instead of merely
version 2.6.6 or later.

** The new option 'configure --with-mailutils' causes Emacs to rely on
GNU Mailutils to retrieve email.  It is recommended, and is the
default if GNU Mailutils is installed.  When --with-mailutils is not
in effect, the Emacs build procedure by default continues to build and
install a limited 'movemail' substitute that retrieves POP3 email only
via insecure channels.  To avoid this problem, use either
--with-mailutils or --without-pop when configuring; --without-pop
is the default on platforms other than native MS-Windows.
